--- a/post_processing.ipynb
+++ b/post_processing.ipynb
@@ -5,7 +5,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Library Import"
+    "# Post_processing Code"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Library Import"
    ]
   },
   {
@@ -43,14 +51,15 @@
     }
    ],
    "source": [
-    "pwd"
+    "pwd #현재 경로 확인"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 모폴로지"
+    "## Morphology (모폴로지)"
    ]
   },
   {
@@ -102,10 +111,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 잘됐는지 원본이랑 비교"
+    "## Compare morphology_images vs result_mask"
    ]
   },
   {
@@ -142,10 +152,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# npy로 저장"
+    "## Morphology images_Save to npy"
    ]
   },
   {
