--- a/Data_preprocessing/Image_crop.ipynb
+++ b/Data_preprocessing/Image_crop.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 늑골 프로젝트 갈비뼈 상/중/하 분할 "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -98,10 +106,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 원본 mid 크롭 후 npy저장"
+    "## 원본 mid 크롭 후 npy저장"
    ]
   },
   {
@@ -153,12 +162,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# 결과이미지 lat크롭 후 npy저장"
+    "## 결과이미지 lat크롭 후 npy저장"
    ]
   },
   {
@@ -195,15 +203,6 @@
     "\n",
     "#         plt.savefig(result_lat_save_path+\"%d_lat.png\"%i)\n",
     "    np.save(result_lat_save_path+'lat.npy',npy_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 원본 mid 크롭 후 npy저장"
    ]
   },
   {
@@ -255,12 +254,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# 상 결과"
+    "## 상 결과"
    ]
   },
   {
@@ -300,12 +298,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# 중 결과"
+    "## 중 결과"
    ]
   },
   {
@@ -346,12 +343,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# 하 결과"
+    "## 하 결과"
    ]
   },
   {
