--- a/Data_preprocessing/make_folder.ipynb
+++ b/Data_preprocessing/make_folder.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 딥러닝을 위한 datasets 세부폴더 생성 및 설정"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -18,13 +26,6 @@
    ],
    "source": [
     "pwd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 데이터 datasets 세부폴더 생성"
    ]
   },
   {
